2007-06-21  Alan Modra  <amodra@bigpond.net.au>

	* embedspu.sh (relas): Correct sh_info parsing.

2007-06-19  Danny Smith  <dannysmith@users.sourceforge.net>
 
  	* objdump.c: Include sys/stat.h.

2007-06-19  Kai Tietz   <kai.tietz@onevision.com>

        * Makefile.am: Add windmc tool.
        * Makefile.in: Regenerate.
        * configure.in: Add windmc tool.
        * configure: Regenerate.
        * mclex.c: New.
        * mcparse.y: New.
        * windmc.c: New.
        * windmc.h: New.
        * doc/Makefile.am: Add windmc tool.
        * doc/Makefile.in: Regenerate.
        * doc/binutils.texi: Add windmc documentation.
	* NEWS: Mention new tool.

2007-06-18  Andi Kleen  <ak@suse.de>

	* objdump.c: Include sys/mman.h 
	(print_file_list): Remove f, add map, mapsize, linemap, maxline,
	last_line, first fields.
	(slurp_file): Add.
	(index_file): Add.
	(print_file_open): Call slurp_file and index_file. Initialize new
	fields.
	(skip_to_line): Rename to print_line and write only single line.
	(dump_line): Add.
	(show_line): Change to new algorithm.

2007-06-18  Thomas Weidenmueller  <w3seek@reactos.org>

	* resres.c (probe_binary): Fix test for badly formatted headers.

2007-06-18  Kai Tietz  <Kai.Tietz@onevision.com>

	* rclex.c: (cpp_line): Add code_page pragma support.
	* windres.c: (usage, long_options, main): Add new option
	--codepage or -c.
	* winduni.c: (wind_default_codepage, wind_current_codepage): New.
	(unicode_from_ascii, ascii_from_unicode): Use
	wind_current_codepage as codepage parameter.
	(unicode_print): Print 4 characters for hexadecimal values in
	unicode strings.
	* winduni.h:  (wind_default_codepage, wind_current_codepage):
	Export.
	* doc/binutils.texi: Document new option.
	* NEWS: Mention new features of windres.

2007-06-18  Brian D. Watt  <bwatt@us.ibm.com>

	* embedspu.sh: Parse _SPUEAR_ symbol values as hex.

2007-06-14  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (ACLOCAL_AMFLAGS): Add -I ../config -I ../bfd.
